examples/test/testpolicy18088.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18088
  namespace: namespace161
spec:
  podSelector:
    matchLabels:
      key4: value48
      key35: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value32
          key23: value26
      podSelector:
        matchLabels:
          key5: value43
          key10: value46
          key28: value49
